--- a/Wanted/html파일/wanted.html
+++ b/Wanted/html파일/wanted.html
@@ -8,8 +8,7 @@
       content="연봉, 연봉정보, 이력서, 이력서양식, 스타트업 채용, 대기업 채용, 채용정보, 개발자 채용, 마케터 채용, 디자이너 채용, 취업, 구인, 구직, 헤드헌터, 헤드헌팅, 면접제안, 기업정보, 커리어, 커리어개발, 기업정보, 프리랜서, 외주, 외주사이트, 직장인부업, 직무개발, 직무교욱, 커리어교육, 직장인교육, 컨퍼런스, 온라인컨퍼런스"
       style="user-select: auto"
     />
-    <!-- 필요없는데 있길래 넣어봄 -->
-
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>원티드 - 나다운 일의 시작</title>
     <meta name="theme-color" content="#B5D3E7" />
@@ -800,10 +799,10 @@
 
     <!-- 회원가입 모달창 부분 -->
     <div id="signinmal_background">
-      <div class="signInMal">
+      <div id="signinmal_first" class="signInMal">
         <div class="signInMalHead">
           <img src="https://img.hankyung.com/photo/202112/01.26651490.1.jpg" alt="">
-          <button id="signin_close_button">
+          <button id="signin_close_button1" class="">
             <svg width="24" height="24" viewBox="0 0 24 24" color="#999">
               <path fill="currentColor" d="M17.97 19.03a.75.75 0 001.06-1.06l-6.5-6.5a.75.75 0 00-1.06 0l-6.5 6.5a.75.75 0 001.06 1.06L12 13.06l5.97 5.97zM12 10.94L6.03 4.97a.75.75 0 00-1.06 1.06l6.5 6.5a.75.75 0 001.06 0l6.5-6.5a.75.75 0 00-1.06-1.06L12 10.94z"></path>
             </svg>
@@ -818,8 +817,9 @@
             <div class="InputPanelEmailBox">
               <label for="email" class="InputPanelEmailLabel">이메일</label>
               <input type="email" placeholder="이메일을 입력해 주세요." id="email" value="">
+              <div id="write_right_address">올바른 이메일 주소를 입력해주세요.</div>
             </div>
-            <div class="InputPanelButtonContainer">
+            <div id="input_panel_button">
               <input type="submit" value="&#xf0e0;   이메일로 계속하기"/>
             </div>
             <div class="InputPanelOrSocial">or</div>
@@ -871,7 +871,7 @@
       <div id="signinmal_second" class="signInMal">
         <div class="signInMalHead">
           <div class="set_center">회원가입</div>
-          <button id="signin_close_button">
+          <button id="signin_close_button2">
             <svg width="24" height="24" viewBox="0 0 24 24" color="#999">
               <path
                 fill="currentColor"
@@ -880,9 +880,9 @@
             </svg>
           </button>
         </div>
-        <div class="signInMalBody">
+        <div class="signInMalBody2">
           <form id="signin_form">
-            <p>이메일</p>
+            <p>이름</p>
             <input type="text" placeholder="이름을 입력해주세요." />
             <p>휴대폰 번호</p>
             <div>
@@ -1022,35 +1022,35 @@
             <p class="passwordDetail">영문 대소문자, 숫자, 특수문자를 3가지 이상으로 조합해 8자 이상 16자 이하로 입력해주세요.</p>
             <div class="checkBoxContainer">
               <div class="checkBoxBox1">
-                <div class="checkBox"></div>
+                <input type="checkbox" id="checkbox_all" onclick="is_all_checked(this)">
                 <p class="checkBoxAllowAll">전체동의</p>
               </div>
               <hr style="border: none; border-bottom: 0.063rem solid #e1e2e3;">
               <div class="checkBoxBox2">
-                <div class="checkBox"></div>
+                <input type="checkbox" name="check" value="checkbox1" onclick="check_all(check, checkbox_all)">
                 <p>만 14세 이상입니다. (필수)</p>
               </div>
               <div class="checkBoxBox2">
                 <div class="checkBoxBox2InnerBox">
-                  <div class="checkBox"></div>
+                  <input type="checkbox" name="check"value="checkbox2" onclick="check_all()">
                   <p>oneID 이용약관 동의 (필수)</p>
                 </div>
                 <p style="font-weight: 600; color: #888;">자세히</p>
               </div>
               <div class="checkBoxBox2">
                 <div class="checkBoxBox2InnerBox">
-                  <div class="checkBox"></div>
+                  <input type="checkbox" name="check" value="checkbox3" onclick="check_all()" >
                   <p>개인정보 및 수집 이용 동의 (필수)</p>
                 </div>
                 <p style="font-weight: 600; color: #888;">자세히</p>
               </div>
-              <div>
-                <button id="signinmal_second_signin_button">
-                  <span>가입하기</span>
-                </button>
-              </div>
             </div>
           </form>
+        </div>
+        <div class="set_center" >
+          <button id="signinmal_second_signin_button">
+            <span>가입하기</span>
+          </button>
         </div>
       </div>
     </div>
